--- a/index.html
+++ b/index.html
@@ -1,46 +1,115 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pokedéx</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pokedex</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
 
-    <!-- Normalize CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
-    <!-- Font Roboto -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!-- Nosso CSS -->
-    <link rel="stylesheet" href="/assets/css/global.css">
-    <link rel="stylesheet" href="/assets/css/pokedex.css">
-</head>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-<body>
-    <section class="content">
-        <h1>Pokedex</h1>
+    <link rel="stylesheet" href="assets/css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Pokedéx</h1>
+      <p>Eu escolho você!</p>
+    </header>
+    <main>
+      <section>
+        <div class="filters">
+          <label for="generationFilter">Geração:</label>
+          <select id="generationFilter">
+            <option value="all">Todas</option>
+            <option value="1">Geração 1</option>
+            <option value="2">Geração 2</option>
+            <option value="3">Geração 3</option>
+            <option value="4">Geração 4</option>
+            <option value="5">Geração 5</option>
+            <option value="6">Geração 6</option>
+            <option value="7">Geração 7</option>
+            <option value="8">Geração 8</option>
+            <option value="9">Geração 9</option>
+          </select>
 
-        <ol id="pokemonList" class="pokemons">
-            <!-- ..... Pokemons here ..... -->
-        </ol>
+          <div class="search-container">
+            <input
+              type="text"
+              id="searchInput"
+              placeholder="Buscar Pokémon..."
+            />
+            <button id="searchBtn" title="Buscar">🔍</button>
+          </div>
 
-        <div class="pagination">
-            <button id="loadMoreButton" type="button">
-                Load More
-            </button>
+          <div class="checkbox-group">
+            <label class="custom-checkbox">
+              <input type="checkbox" id="legendaryFilter" />
+              <span class="checkmark"></span>
+              Lendário
+            </label>
+
+            <label class="custom-checkbox">
+              <input type="checkbox" id="mythicalFilter" />
+              <span class="checkmark"></span>
+              Mítico
+            </label>
+          </div>
         </div>
-    </section>
 
-    <!-- Nosso JS -->
-    <script src="/assets/js/pokemon-model.js"></script>
-    <script src="/assets/js/poke-api.js"></script>
-    <script src="/assets/js/main.js"></script>
-</body>
+        <!-- Aqui será inserida a lista via JS -->
+        <ol id="pokedex-list"></ol>
+      </section>
+    </main>
 
+    <!-- Modal de Detalhes -->
+    <div id="pokemon-modal" class="modal hidden">
+      <div class="modal-content" id="modal-content">
+        <button id="close-btn" class="close" aria-label="Close modal">
+          &times;
+        </button>
+        <h2 id="pokemon-name"></h2>
+        <img id="pokemon-image" src="" alt="" />
+        <p><strong>Tipo:</strong> <span id="modal-type"></span></p>
+        <p>
+          <strong>Altura:</strong> <span id="pokemon-height"></span> m
+          <strong style="margin-left: 10px">Peso:</strong>
+          <span id="pokemon-weight"></span> kg
+        </p>
+
+        <p>
+          <strong>HP:</strong> <span id="pokemon-health-points"></span>
+          <strong style="margin-left: 10px">Ataque:</strong>
+          <span id="pokemon-attack"></span>
+        </p>
+
+        <hr />
+
+        <p><strong>Sexo:</strong> <span id="pokemon-gender"></span></p>
+        <p>
+          <strong>Habilidades:</strong> <span id="pokemon-abilities"></span>
+        </p>
+        <p>
+          <strong>Descrição:</strong> <span id="pokemon-description"></span>
+        </p>
+        <p><strong>Movimentos:</strong> <span id="pokemon-moves"></span></p>
+      </div>
+    </div>
+
+    <script type="module" src="assets/js/main.js"></script>
+  </body>
 </html>
