--- a/index.html
+++ b/index.html
@@ -110,6 +110,6 @@
       </div>
     </div>
 
-    <script type="module" src="assets/js/main.js"></script>
+    <script type="module" src="assets/js/main.js" defer></script>
   </body>
 </html>
